feat: Support for multiple references to the same entity with different attribute sets
Corrected implementation of existing reference builder so that tests pass.

Refs: #906
Signed-off-by: Jan Novotný <novotnaci@gmail.com>